<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StudySNS</string>
    <string name="button1">진행중인스터디</string>
    <string name="button2">알림설정</string>
    <string name="sync_title">전체 알람</string>
    <string name="section1_header">오늘의 스터디</string>
    <string name="section2_header">커뮤니티</string>
    <string name="section3_header">광고 동의</string>
    <string name="reply_title">수신 방법</string>
    <string name="timesetting_title">오늘 일정 알림 시각</string>
    <string name="timesetting2_title">내일의 일정 알림 시각</string>
    <string name="alaramreply_title">댓글 알림</string>
    <string name="replyreply_title">대댓글</string>
    <string name="attachment_title">광고성 정보 수신 동의</string>
    <string name="attachment_summary_on">동의 하셨습니다.
    </string>
    <string name="attachment_summary_off">마케팅 정보 수신 동의\n
Build는 개인정보보호법 및 정보통신망이용촉진및정보보호등에관한법률 등 관계법령에 따라 광고성정보를 전송하기 위해 수신자의 사전 수신동의를 받고 있으며, 광고성정보 수신자 의 수신동의여부를 정기적으로 확인합니다.\n\n

- 전송방법\n
고객님의 모바일 App Push, 핸드폰 문자메시지(SMS), Email 등을 통해 전달될 수 있습니다.\n\n

- 전송내용\n
발송되는 마케팅 정보는 수신자에게 Build와 관련하여 제공하는 혜택(포인트, 쿠폰 등) 정보, 각종 이벤트 정보 등 광고성 정보로 관련 법의 규정을 준수하여 발송됩니다.\n\n
 단, 광고성 정보 이외 의무적으로 안내되어야 하는 정보성 내용은 수신동의 여부와 무관하게 제공됩니다.\n

- 철회안내\n
고객님은 수신 동의 이후에라도 의사에 따라 동의를 철회할 수 있으며, 수신을 동의하지 않아도 회사가 제공하는 기본적인 서비스를 이용할 수 있으나, 당사의 마케팅 정보를 수신하지 못할 수 있습니다.\n\n

- 수신동의 변경\n
Build 홈페이지 또는 Build 고객센터(02-000-0000)을 통해 수신동의를 변경(동의/철회)할 수 있습니다.\n\n

- 개인정보 이용 상세내용\n
이용하는 개인정보 - 보유 이용 목적\n
휴대전화번호,이메일주소 - 혜택 정보,각종 이벤트 정보 등 광고성 정보 제공"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left">진행 중</string>
    <string name="mid">모집 마감</string>
    <string name="right">접수 현황</string>
    <string name="element_text">test</string>
    <string name="imf_switch">개인정보 처리 방침</string>
    <string name="imf_agree">
제2조(개인정보의 처리 및 보유 기간)

① 은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.

② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.

1.홈페이지 회원가입 및 관리
홈페이지 회원가입 및 관리와 관련한 개인정보는 수집.이용에 관한 동의일로부터10년까지 위 이용목적을 위하여 보유.이용됩니다.
보유근거 : 관련법령에 의한 년도
관련법령 : 1)소비자의 불만 또는 분쟁처리에 관한 기록 : 3년
2) 대금결제 및 재화 등의 공급에 관한 기록 : 5년
3) 계약 또는 청약철회 등에 관한 기록 : 5년
예외사유 : 탈퇴하거나 동의하지 않을 경우


제3조(개인정보의 제3자 제공)

① 은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.

② 은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.

1.개인정보를 제공받는 자 : Build
제공받는 자의 개인정보 이용목적 : 이메일, 휴대전화번호, 자택주소, 자택전화번호, 비밀번호 질문과 답, 비밀번호, 로그인ID, 성별, 생년월일, 이름
제공받는 자의 보유.이용기간: 3년

제4조(개인정보처리 위탁)

① 은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.

1.위탁받는 자 (수탁자) : 정보수집 및 데이터 활용
위탁하는 업무의 내용 : 본인인증(금융거래, 금융서비스), 회원제 서비스 이용에 따른 본인확인, 고지사항 전달, 신규 서비스(제품) 개발 및 맞춤 서비스 제공
위탁기간 : 5년
② 은(는) 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.

③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.



제5조(정보주체와 법정대리인의 권리·의무 및 그 행사방법)



① 정보주체는 Build에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.

② 제1항에 따른 권리 행사는Build에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 Build은(는) 이에 대해 지체 없이 조치하겠습니다.

③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.

④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.

⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.

⑥ Build은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.



제6조(처리하는 개인정보의 항목 작성)
① 은(는) 다음의 개인정보 항목을 처리하고 있습니다.

1 홈페이지 회원가입 및 관리
필수항목 : 이메일, 휴대전화번호, 자택주소, 자택전화번호, 비밀번호 질문과 답, 비밀번호, 로그인ID, 성별, 생년월일, 이름
선택항목 : 이메일

제7조(개인정보의 파기


① 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.

② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.
1. 법령 근거 :
2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜

③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.
1. 파기절차
은(는) 파기 사유가 발생한 개인정보를 선정하고, 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.

2. 파기방법

전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다



제8조(개인정보의 안전성 확보 조치)

은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.

1. 정기적인 자체 감사 실시
개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.

2. 개인정보 취급 직원의 최소화 및 교육
개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.

3. 내부관리계획의 수립 및 시행
개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.

4. 해킹 등에 대비한 기술적 대책
Build(Build)은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.

5. 개인정보의 암호화
이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.

6. 접속기록의 보관 및 위변조 방지
개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.

7. 개인정보에 대한 접근 제한
개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.

8. 문서보안을 위한 잠금장치 사용
개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는 안전한 장소에 보관하고 있습니다.

9. 비인가자에 대한 출입 통제
개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.




제9조(개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항)



① Build 은(는) 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다. ② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다. 가. 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다. 나. 쿠키의 설치•운영 및 거부 : 웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다. 다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.

제10조 (개인정보 보호책임자)

① Build 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.

▶ 개인정보 보호책임자
성명 :최경수
직책 :개발6팀
직급 :팀원
연락처 :010-8888-8888, yout@naver.com, 02-505-345
※ 개인정보 보호 담당부서로 연결됩니다.

▶ 개인정보 보호 담당부서
부서명 :R/D
담당자 :최경수
연락처 :2, 2, 2
② 정보주체께서는 Build 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. Build 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.



제11조(가명정보의 처리)

은(는) 다음과 같은 목적으로 가명정보를 처리하고 있습니다.

▶ 가명정보의 처리 목적

- 직접작성 가능합니다.

▶ 가명정보의 처리 및 보유기간

- 직접작성 가능합니다.

▶ 가명정보의 제3자 제공에 관한 사항(해당되는 경우에만 작성)

- 직접작성 가능합니다.

▶ 가명정보 처리의 위탁에 관한 사항(해당되는 경우에만 작성)

- 직접작성 가능합니다.

▶ 가명처리하는 개인정보의 항목

- 직접작성 가능합니다.

▶ 법 제28조의4(가명정보에 대한 안전조치 의무 등)에 따른 가명정보의 안전성 확보조치에 관한 사항

- 직접작성 가능합니다.



제12조(국내대리인의 지정)

정보주체는 ｢개인정보 보호법｣ 제39조의11에 따라 지정된 의 국내대리인에게 개인정보 관련 고충처리 등의 업무를 위하여 연락을 취할 수 있습니다. 은(는) 정보주체의 개인정보 관련 고충처리 등 개인정보 보호책임자의 업무 등을 신속하게 처리할 수 있도록 노력하겠습니다.

▶ 은(는) ｢개인정보 보호법｣ 제39조의11에 따라 국내대리인을 지정하였습니다.

- 국내대리인의 성명 : [대리인 성명_직접입력] (법인의 경우 법인명, 대표자의 성명)

- 국내대리인의 주소 : [대리인 주소_직접입력] (법인의 경우 영업소 소재지)

- 국내대리인의 전화번호 : [대리인 전화번호_직접입력]

- 국내대리인의 전자우편 주소 : [대리인 전자우편_직접입력]



제13조(가명정보의 처리)

▶ 개인정보를 추가적으로 이용·제공하려는 목적이 당초 수집 목적과 관련성이 있는지 여부

▶ 개인정보를 수집한 정황 또는 처리 관행에 비추어 볼 때 추가적인 이용·제공에 대한 예측 가능성이 있는지 여부

▶ 개인정보의 추가적인 이용·제공이 정보주체의 이익을 부당하게 침해하는지 여부

▶ 가명처리 또는 암호화 등 안전성 확보에 필요한 조치를 하였는지 여부

※ 추가적인 이용·제공 시 고려사항에 대한 판단기준은 사업자/단체 스스로 자율적으로 판단하여 작성·공개함

제14조(개인정보 열람청구)
정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.
은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.

▶ 개인정보 열람청구 접수·처리 부서
부서명 :
담당자 :
연락처 : , ,


제15조(권익침해 구제방법)



정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.

1. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)
2. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)
3. 대검찰청 : (국번없이) 1301 (www.spo.go.kr)
4. 경찰청 : (국번없이) 182 (cyberbureau.police.go.kr)

「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.

※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.

제16조(영상정보처리기기 설치·운영)
① 은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다.

1.영상정보처리기기 설치근거·목적 : 의

2.설치 대수, 설치 위치, 촬영 범위 :
설치대수 : 대
설치위치 :
촬영범위 :
3.관리책임자, 담당부서 및 영상정보에 대한 접근권한자 :

4.영상정보 촬영시간, 보관기간, 보관장소, 처리방법
촬영시간 : 시간
보관기간 : 촬영시부터 년
보관장소 및 처리방법 :
5.영상정보 확인 방법 및 장소 :

6.정보주체의 영상정보 열람 등 요구에 대한 조치 : 개인영상정보 열람.존재확인 청구서로 신청하여야 하며, 정보주체 자신이 촬영된 경우 또는 명백히 정보주체의 생명.신체.재산 이익을 위해 필요한 경우에 한해 열람을 허용함

7.영상정보 보호를 위한 기술적.관리적.물리적 조치 :



제17조(개인정보 처리방침 변경)


① 이 개인정보처리방침은 2021년 4월 20부터 적용됩니다.

② 이전의 개인정보 처리방침은 아래에서 확인하실 수 있습니다.

예시 ) - 20XX. X. X ~ 20XX. X. X 적용 (클릭)

예시 ) - 20XX. X. X ~ 20XX. X. X 적용 (클릭)

예시 ) - 20XX. X. X ~ 20XX. X. X 적용 (클릭)</string>
    <string name="imf2_switch">정보 동의 설정 화면</string>
    <string name="content">제22조의2(접근권한에 대한 동의) ① 정보통신서비스 제공자는 해당 서비스를 제공
하기 위하여 이용자의 이동통신단말장치 내에 저장되어 있는 정보 및 이동통신단말
장치에 설치된 기능에 대하여 접근할 수 있는 권한(이하 "접근권한"이라 한다)이 필요한
경우 다음 각 호의 사항을 이용자가 명확하게 인지할 수 있도록 알리고 이용자의
동의를 받아야 한다. 1. 해당 서비스를 제공하기 위하여 반드시 필요한 접근권한인 경우
 가. 접근권한이 필요한 정보 및 기능의 항목
 나. 접근권한이 필요한 이유
2. 해당 서비스를 제공하기 위하여 반드시 필요한 접근권한이 아닌 경우
 가. 접근권한이 필요한 정보 및 기능의 항목
 나. 접근권한이 필요한 이유
 다. 접근권한 허용에 대하여 동의하지 아니할 수 있다는 사실
② 정보통신서비스 제공자는 해당 서비스를 제공하기 위하여 반드시 필요하지 아니한
접근권한을 설정하는 데 이용자가 동의하지 아니한다는 이유로 이용자에게 해당 서비스의
제공을 거부하여서는 아니 된다. ③ 이동통신단말장치의 기본 운영체제(이동통신단말장치에서 소프트웨어를 실행할 수
있는 기반 환경을 말한다)를 제작하여 공급하는 자와 이동통신단말장치 제조업자 및
이동통신단말장치의 소프트웨어를 제작하여 공급하는 자는 정보통신서비스 제공자가
이동통신단말장치 내에 저장되어 있는 정보 및 이동통신단말장치에 설치된 기능에
접근하려는 경우 접근권한에 대한 이용자의 동의 및 철회방법을 마련하는 등 이용자
정보 보호에 필요한 조치를 하여야 한다. ④ 제1항에 따른 접근권한의 범위 및 동의의 방법, 제3항에 따른 이용자 정보 보호를
위하여 필요한 조치 및 그 밖에 필요한 사항은 대통령령으로 정한다. 제64조(자료의 제출 등) ④ 미래창조과학부장관 또는 방송통신위원회는 이 법을 위반한
정보통신서비스 제공자등에게 해당 위반행위의 중지나 시정을 위하여 필요한 시정
조치를 명할 수 있고, 시정조치의 명령을 받은 정보통신서비스 제공자등에게 시정조치의
명령을 받은 사실을 공표하도록 할 수 있다. 이 경우 공표의 방법·기준 및 절차 등에
필요한 사항은 대통령령으로 정한다.
- 25 -
2 정보통신망법 이용촉진 및 정보보호 등에 관한 법률 시행령
제64조의3(과징금의 부과 등) ① 방송통신위원회는 다음 각 호의 어느 하나에 해당
하는 행위가 있는 경우에는 해당 정보통신서비스 제공자등에게 위반행위와 관련한
매출액의 100분의 3 이하에 해당하는 금액을 과징금으로 부과할 수 있다. 1. 제22조제1항(제67조에 따라 준용되는 경우를 포함한다)을 위반하여 이용자의 동의를
받지 아니하고 개인정보를 수집한 경우
제71조(벌칙) ①다음 각 호의 어느 하나에 해당하는 자는 5년 이하의 징역 또는 5천만원
이하의 벌금에 처한다. 1. 제22조제1항(제67조에 따라 준용되는 경우를 포함한다)을 위반하여 이용자의 동의를
받지 아니하고 개인정보를 수집한 자
제76조(과태료) ① 다음 각 호의 어느 하나에 해당하는 자와 제7호부터 제11호까지의
경우에 해당하는 행위를 하도록 한 자에게는 3천만원 이하의 과태료를 부과한다. 1. 제22조의2제2항 또는 제23조제3항(제67조에 따라 준용되는 경우를 포함한다)을
위반하여 서비스의 제공을 거부한 자
1의2. 제22조의2제3항(제67조에 따라 준용되는 경우를 포함한다)을 위반하여 접근
권한에 대한 이용자의 동의 및 철회방법을 마련하는 등 이용자 정보 보호를 위하여
필요한 조치를 하지 아니한 자
12. 이 법을 위반하여 제64조제4항에 따라 미래창조과학부장관 또는 방송통신위원회
로부터 받은 시정조치 명령을 이행하지 아니한 자</string>
    <string name="imf3_switch">서비스 이용약관</string>
    <string name="title">스터디이름</string>
    <string name="category">모집내용</string>
    <string name="writer">그룹대표</string>
    <string name="term">기간 : </string>
    <string name="Tdata">2021.05.03 ~ 05</string>
</resources>